removing nextSib in favor of the smaller set of actions "move parent" and "move child n". this makes the math in the paper consistent with the agda formalization, which got this update earlier tonight.
i beleive, but should be checked, that i didn't mess up any of the line
number in the example. i think i also caught the text that talked about
nextsib, mostly by deleting the macro and seeing what broke.

someone else should review this commit and make sure that is correct.

we should also consider adding text how you can get next and prev sib as
derived actions, maybe in the section where we talk about action macros.

--- a/appendix.tex
+++ b/appendix.tex
@@ -254,13 +254,24 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
     \performTyp{
       \zwsel{\tarr{\htau_1}{\htau_2}}
     }{
-      \aMove{\dChild}
+      \aMove{\dChildn{1}}
     }{
       \tarr{\zwsel{\htau_1}}{\htau_2}
     }
   }
 \end{equation}
-\begin{equation}
+\begin{equation}\label{rule:move-arr-c2}
+  \inferrule{ }{
+    \performTyp{
+      \zwsel{\tarr{\htau_1}{\htau_2}}
+    }{
+      \aMove{\dChildn{2}}
+    }{
+      \tarr{\htau_1}{\zwsel{\htau_2}}
+    }
+  }
+\end{equation}
+\begin{equation}\label{rule:move-parent-arr-left}
   \inferrule{ }{
     \performTyp{
       \tarr{\zwsel{\htau_1}}{\htau_2}
@@ -271,7 +282,7 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
     }
   }
 \end{equation}
-\begin{equation}
+\begin{equation}\label{rule:move-parent-arr-right}
   \inferrule{ }{
     \performTyp{
       \tarr{{\htau_1}}{\zwsel{\htau_2}}
@@ -279,17 +290,6 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
       \aMove{\dParent}
     }{
       \zwsel{\tarr{\htau_1}{\htau_2}}
-    }
-  }
-\end{equation}
-\begin{equation}
-  \inferrule{ }{
-    \performTyp{
-      \tarr{\zwsel{\htau_1}}{{\htau_2}}
-    }{
-      \aMove{\dNext}
-    }{
-      {\tarr{\htau_1}{\zwsel{\htau_2}}}
     }
   }
 \end{equation}
@@ -367,21 +367,31 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
 
 \begin{subequations}
 \paragraph{Ascription}
-
-\begin{equation}
+  \begin{equation}
   \inferrule{ }{
-    \performMove{
+    \performTyp{
       \zwsel{\hexp : \htau}
     }{
-      \aMove{\dChild}
+      \aMove{\dChildn{1}}
     }{
       \zwsel{\hexp} : \htau
+    }
+  }
+  \end{equation}
+  \begin{equation}
+    \inferrule{ }{
+    \performTyp{
+      \zwsel{\hexp : \htau}
+    }{
+      \aMove{\dChildn{2}}
+    }{
+      \hexp : \zwsel{\htau}
     }
   }
 \end{equation}
 \begin{equation}
   \inferrule{ }{
-    \performMove{
+    \performTyp{
       \zwsel{\hexp} : \htau
     }{
       \aMove{\dParent}
@@ -392,23 +402,12 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
 \end{equation}
 \begin{equation}
   \inferrule{ }{
-    \performMove{
+    \performTyp{
       \hexp : \zwsel{\htau}
     }{
       \aMove{\dParent}
     }{
       \zwsel{\hexp : \htau}
-    }
-  }
-\end{equation}
-\begin{equation}
-  \inferrule{ }{
-    \performMove{
-      \zwsel{\hexp} : \htau
-    }{
-      \aMove{\dNext}
-    }{
-      \hexp : \zwsel{\htau}
     }
   }
 \end{equation}
@@ -419,7 +418,7 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
   \performMove{
     \zwsel{\hlam{x}{\hexp}}
   }{
-    \aMove{\dChild}
+    \aMove{\dChildn{1}}
   }{
     \hlam{x}{\zwsel{\hexp}}
   }
@@ -442,9 +441,20 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
     \performMove{
       \zwsel{\hap{\hexp_1}{\hexp_2}}
     }{
-      \aMove{\dChild}
+      \aMove{\dChildn{1}}
     }{
       \hap{\zwsel{\hexp_1}}{\hexp_2}
+    }
+  }
+\end{equation}
+\begin{equation}
+  \inferrule{ }{
+    \performMove{
+      \zwsel{\hap{\hexp_1}{\hexp_2}}
+    }{
+      \aMove{\dChildn{2}}
+    }{
+      \hap{\hexp_1}{\zwsel{\hexp_2}}
     }
   }
 \end{equation}
@@ -470,17 +480,6 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
     }
   }
 \end{equation}
-\begin{equation}
-  \inferrule{ }{
-    \performMove{
-      \hap{\zwsel{\hexp_1}}{\hexp_2}
-    }{
-      \aMove{\dNext}
-    }{
-      \hap{\hexp_1}{\zwsel{\hexp_2}}
-    }
-  }
-\end{equation}
 
 \paragraph{Plus}
 \begin{equation}
@@ -488,9 +487,20 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
     \performMove{
       \zwsel{\hadd{\hexp_1}{\hexp_2}}
     }{
-      \aMove{\dChild}
+      \aMove{\dChildn{1}}
     }{
       \hadd{\zwsel{\hexp_1}}{\hexp_2}
+    }
+  }
+\end{equation}
+\begin{equation}
+  \inferrule{ }{
+    \performMove{
+      \zwsel{\hadd{\hexp_1}{\hexp_2}}
+    }{
+      \aMove{\dChildn{2}}
+    }{
+      \hadd{\hexp_1}{\zwsel{\hexp_2}}
     }
   }
 \end{equation}
@@ -516,17 +526,6 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
     }
   }
 \end{equation}
-\begin{equation}
-  \inferrule{ }{
-    \performMove{
-      \hadd{\zwsel{\hexp_1}}{\hexp_2}
-    }{
-      \aMove{\dNext}
-    }{
-      \hadd{\hexp_1}{\zwsel{\hexp_2}}
-    }
-  }
-\end{equation}
 
 \paragraph{Non-Empty Hole}
 \begin{equation}
@@ -534,7 +533,7 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
   \performMove{
     \zwsel{\hhole{\hexp}}
   }{
-    \aMove{\dChild}
+    \aMove{\dChildn{1}}
   }{
     \hhole{\zwsel{\hexp}}
   }
