oops multiply defined labels fixed.

--- a/appendix.tex
+++ b/appendix.tex
@@ -260,7 +260,7 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
     }
   }
 \end{equation}
-\begin{equation}\label{rule:move-arr-c2}
+\begin{equation}
   \inferrule{ }{
     \performTyp{
       \zwsel{\tarr{\htau_1}{\htau_2}}
@@ -271,7 +271,7 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
     }
   }
 \end{equation}
-\begin{equation}\label{rule:move-parent-arr-left}
+\begin{equation}
   \inferrule{ }{
     \performTyp{
       \tarr{\zwsel{\htau_1}}{\htau_2}
@@ -282,7 +282,7 @@ complete H-types, and $e$ rather than $\hexp$ for complete H-expressions.
     }
   }
 \end{equation}
-\begin{equation}\label{rule:move-parent-arr-right}
+\begin{equation}
   \inferrule{ }{
     \performTyp{
       \tarr{{\htau_1}}{\zwsel{\htau_2}}
