updating syn con case rule to match agda and previous rules

--- a/sumtypes.tex
+++ b/sumtypes.tex
@@ -270,7 +270,7 @@ analysis,~$\hcase{\hexp}{x}{\hexp_1}{y}{\hexp_2}$.
 \end{equation}
 \begin{equation}\label{rule:performSyn-case-2}
 \inferrule{
-  \tincompat{\htau}{\htau_1 + \htau_2}
+  \tincompat{\htau}{\tehole + \tehole}
 }{
   \performSyn
   {\hGamma}
