if we're gonna be faux french, we might as well spell it right

--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -31,7 +31,6 @@ basicstyle=\ttfamily\fontsize{8pt}{1em}\selectfont}
 \usepackage{joshuadunfield}
 \usepackage{llproof}
 \usepackage{rulelinks}
-
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{corollary}{Corollary}
@@ -122,7 +121,7 @@ designers, because they do not need to contend with malformed program text.
 
 This paper defines Hazelnut, a {structure editor} based on a small
 bidirectionally typed lambda calculus extended with \emph{holes} and
-a \emph{cursor} (\emph{ala} Huet's zipper.) Hazelnut goes one step beyond
+a \emph{cursor} (\emph{\`{a} la} Huet's zipper.) Hazelnut goes one step beyond
 syntactic well-formedness: its {edit actions} operate over statically
 meaningful (i.e. well-typed) terms.  Na\"ively, this prohibition on
 ill-typed edit states would force the programmer to construct terms in a
