mentioning structural props close #12

--- a/formally.tex
+++ b/formally.tex
@@ -23,9 +23,12 @@ systematically introduce the following structures:
 
 Our overview below omits certain ``uninteresting'' details. The supplement
 includes the complete collection of rules, in definitional order. These
-rules, along with the proofs of two key metatheorems, have been mechanized
-in Agda \cite{norell:thesis}, also in the supplement. We will summarize
-this effort in Sec. \ref{sec:mech}.
+rules, along with the proofs of all of the metatheorems listed, have been
+mechanized in Agda \cite{norell:thesis}, also in the supplement. All the
+judgements that mention contexts described below enjoy the standard
+structural properties of weakening, contraction, and exchange, and this too
+is proven in the mechanization. We will summarize this effort in
+Sec. \ref{sec:mech}.
 
 \subsection{H-types and H-expressions}\label{sec:holes}
 Figure \ref{fig:hexp-syntax} defines the syntax of H-types, $\htau$, and
