--- a/formally.tex
+++ b/formally.tex
@@ -51,7 +51,9 @@ $\hexp$ is complete (see supplement.) We are not concerned here with
 defining a dynamic semantics for Hazelnut, but the dynamics for complete
 H-expressions would be entirely standard (in Sec. \ref{sec:rw} we discuss
 the multi-dimensional design space around the question of evaluating
-incomplete H-expressions.)
+incomplete H-expressions.) For completeness, a mapping from the
+bidirectional type system to a declarative one, and a of type safety for
+complete terms in that system, is included in the mechanization.
 
 \begin{figure}[t]
 $\arraycolsep=4pt\begin{array}{lllllll}
