--- a/agda.tex
+++ b/agda.tex
@@ -8,16 +8,11 @@ mechanized the semantics of Hazelnut using the Agda proof
 assistant \cite{norell:thesis} (also see the Agda Wiki, hosted
 at \url{http://wiki.portal.chalmers.se/agda/}.)
 
-This development is available in the supplemental material. At the time of
-submission, the full set of rules is available and the proofs of
-Theorem \ref{thrm:actsafe}, Theorem \ref{lemma:movement-erasure} and a
-number of technical lemmas that we elided or mentioned informally in the
-text are complete. We also have nearly all of the cases of Reachability and
-Constructability complete, and we see no major barrier to the remaining
-cases -- we prioritized developing a clear exposition of our contributions
-after proving representative cases and finding that they were
-straightforward. The remaining cases will be completed in the repository
-linked in the non-anonymous supplementary material.
+This development is available in the supplemental material. It contains the
+full set of rules given in the paper, and proofs of all of the theorems
+described. It also contains the rules needed for the extension to the
+language described in Sec. \ref{sec:extending}, and extends the proofs to
+the constructs.
 
 The documentation includes a more detailed discussion of the technical
 representation decisions that we made. The main idea is standard: we encode
@@ -33,32 +28,3 @@ We adopt Barendregt's convention for bound
 variables \cite{urban}. Hazelnut's semantics does not need substitution, so
 we do not need to adopt more sophisticated encodings
 (e.g. \cite{lh09unibind,Pouillard11}.)
-
-\subsection{Determinism}
-A useful property would be \emph{action determinism}, i.e. that performing
-an action produces a unique result. Formally, this would be established as
-follows:
-\begin{enumerate}[itemsep=0px,partopsep=0px,topsep=0px]
-\item If $\performTyp{\ztau}{\alpha}{\ztau'}$ and
-$\performTyp{\ztau}{\alpha}{\ztau''}$ then $\ztau'=\ztau''$.
-\item If $\hsyn{\hGamma}{\removeSel{\zexp}}{\htau}$ and
-  $\performSyn{\hGamma}{\zexp}{\htau}{\alpha}{\zexp'}{\htau'}$ and
-  $\performSyn{\hGamma}{\zexp}{\htau}{\alpha}{\zexp''}{\htau''}$ then
-  $\zexp' = \zexp''$ and $\htau' = \htau''$.
-\item If $\hana{\hGamma}{\removeSel{\zexp}}{\htau}$ and
-  $\performAna{\hGamma}{\zexp}{\htau}{\alpha}{\zexp'}$ and
-  $\performAna{\hGamma}{\zexp}{\htau}{\alpha}{\zexp''}$ then $\zexp' =
-  \zexp''$.
-\end{enumerate}
-
-This is not a theorem of the system as described in this paper. The reason
-is quite subtle: the semantics of two construction actions,
-$\aConstruct{\fasc}$ and $\aConstruct{\flam{x}}$, behave differently in the
-analytic case than they do in the synthetic case -- the difference has to
-do with what the generated ascription contains. Both cases can technically
-``fire'' due to action subsumption. The mechanization includes a ``proof''
-of determinism for all cases but these two. Resolving this ambiguity
-formally requires some rather inelegant machinery to exclude these
-particular base cases from action subsumption, so we are content to
-admonish implementors who apply action subsumption when another analytic
-rule would do.
